# oca-ocb-project

./: README.md
odoo-bringout-oca-ocb-project/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-project/project/i18n/: bs.po  project.pot
odoo-bringout-oca-ocb-project_account/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_hr_expense/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_hr_expense/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-project_hr_skills/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_mail_plugin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_mail_plugin/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-project_mrp/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_mrp/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-project_mrp_account/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_mrp_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_mrp_stock_landed_costs/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_purchase/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_purchase/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-project_purchase_stock/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_stock/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_stock_account/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_stock_landed_costs/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_timesheet_holidays/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_todo/: README.md  pyproject.toml
(+14 files in other folders)
