[project]
name = "odoo-bringout-oca-ocb-project_stock"
version = "19.0.0"
description = "project_stock - Odoo addon (upstream OCB 19.0, added for v16->v19 migration completeness)"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["project_stock"]
